# msal-python-msi-v2-e2e

./: README.md  requirements.txt  run_e2e.py  setup.cfg
devapp_msi_v2_mtls/: app.py
msal/: __init__.py  managed_identity.py  msi_v2.py  sku.py  windows_certificate.py
msal-key-attestation/: pyproject.toml
msal-key-attestation/msal_key_attestation/: __init__.py  attestation.py
msal-schannel-transport/: pyproject.toml
msal-schannel-transport/msal_schannel_transport/: __init__.py  session.py
