[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msal-key-attestation"
dynamic = ["version"]
description = "KeyGuard attestation support for MSAL Python MSI v2 (mTLS PoP). Provides AttestationClientLib.dll bindings for Windows Credential Guard key attestation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Microsoft Corporation", email = "nugetaad@microsoft.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "msal>=1.32.0",
]

[project.urls]
Homepage = "https://github.com/AzureAD/microsoft-authentication-library-for-python"
Repository = "https://github.com/AzureAD/microsoft-authentication-library-for-python"

[tool.setuptools.dynamic]
version = {attr = "msal_key_attestation.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
